crates/monosecret/src/provider/snapshots/monosecret__provider__vault__tests__build_headers_includes_namespace_when_set.snap
---
source: crates/monosecret/src/provider/vault.rs
expression: "format!(\"X-Vault-Token: {}\\nX-Vault-Namespace: {}\",\nheaders.get(\"X-Vault-Token\").unwrap().to_str().unwrap(),\nheaders.get(\"X-Vault-Namespace\").unwrap().to_str().unwrap())"
---
X-Vault-Token: my-token
X-Vault-Namespace: ns1
