crates/monosecret/src/provider/snapshots/monosecret__provider__vault__tests__build_headers_includes_token.snap
---
source: crates/monosecret/src/provider/vault.rs
expression: "format!(\"X-Vault-Token: {}\\nX-Vault-Namespace: {:?}\",\nheaders.get(\"X-Vault-Token\").unwrap().to_str().unwrap(),\nheaders.get(\"X-Vault-Namespace\"))"
---
X-Vault-Token: my-token
X-Vault-Namespace: None
