crates/monosecret/src/provider/snapshots/monosecret__provider__vault__tests__build_headers_rejects_invalid_token.snap
---
source: crates/monosecret/src/provider/vault.rs
expression: err.to_string()
---
Provider operation failed: Invalid token value: failed to parse header value
