crates/monosecret/src/provider/snapshots/monosecret__provider__vault__tests__set_errors_on_invalid_namespace_before_network.snap
---
source: crates/monosecret/src/provider/vault.rs
expression: err.to_string()
---
Provider operation failed: Invalid namespace value: failed to parse header value
